2008-07-23  Sam Steingold  <sds@gnu.org>

	* init.lisp (cons-*fenv*, illegal-syntax): add
	(%expand-form, %expand-fundefs-1, %expand-funmacdefs-1): use them
	* macros3.lisp (expand-LETF*, expand-LETF): use ILLEGAL-SYNTAX
	* compiler.lisp (add-fenv, c-FLET, c-FUNCTION-MACRO-LET)
	(c-GENERIC-FLET, c-MACROLET): use CONS-*FENV*

2008-07-22  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (OBJECT_OUT, NOBJECT_OUT): fflush stdout

2008-07-22  Sam Steingold  <sds@gnu.org>

	* modules/pcre/cpcre.c (PCRE-COMPILE): fix a typo: UNGREADY->UNGREEDY
	Reported by Todd Kirby <ffmpeg.php@gmail.com>

2008-07-22  Sam Steingold  <sds@gnu.org>

	* makemake.in (check-script): many more tests

2008-07-22  Sam Steingold  <sds@gnu.org>

	* stream.d (error_value_stream): print the caller

2008-07-22  Sam Steingold  <sds@gnu.org>

	* spvw_sigsegv.d (print_mem_stats): also print a timescore_t

2008-07-22  Sam Steingold  <sds@gnu.org>

	* debug.d (%ROOM): additionally return gc_count, gc_space, gc_time
	* lispbibl.d (internal_time_to_I): declare extern
	* time.d (internal_time_to_I): make global
	* room.lisp (room): return the same values as gc, print gc stats

2008-07-22  Sam Steingold  <sds@gnu.org>

	* eval.d (SUBR-INFO): use STACK_to_mv instead of L(values)
	* stream.d (MAKE-PIPE-IO-STREAM): ditto
	* time.d (%%TIME): ditto

2008-07-22  Sam Steingold  <sds@gnu.org>

	* lispbibl.d: fix bug #[ 2011096 ]: unicode in comments causes
	compile errors when LANG=ja_JP.eucJP

2008-07-22  Sam Steingold  <sds@gnu.org>

	* utils/clispload.lsp (*expected-failures*): drop tests that we pass

2008-07-21  Sam Steingold  <sds@gnu.org>

	* modules/clx/new-clx/clx.f (get_font_info_and_display): prefix
	*CANONICALIZE-ENCODING* with XLIB:: for bootstrap when is has not
	been exported yet

2008-07-21  Sam Steingold  <sds@gnu.org>

	the sets of declaration and type names are disjoint, as per ANSI
	(see http://www.lisp.org/HyperSpec/Body/dec_type.html)
	* condition.lisp (check-not-type, check-not-declaration): define